--- a/config.json
+++ b/config.json
@@ -86,4 +86,8 @@
       "name": "小猫咪资源"
     }
   }
-}
+}，
+"18": {
+      "api": "https://api.bwzyz.com/api.php/provide/vod",
+      "name": "18+"
+    },
