--- a/config.json
+++ b/config.json
@@ -87,7 +87,7 @@
     }，
     "18": {
       "api": "https://api.bwzyz.com/api.php/provide/vod",
-      "name": "18",
+      "name": "18"
     }
   }
 }
