--- a/config.json
+++ b/config.json
@@ -88,6 +88,10 @@
     "18": {
       "api": "https://api.bwzyz.com/api.php/provide/vod",
       "name": "18"
+    },
+    "abc": {
+      "api": "https://caiji.maotaizy.cc/api.php/provide/vod",
+      "name": "abc"
     }
   }
 }
